fixed lines overflow

--- a/assets/css/extended/blog.css
+++ b/assets/css/extended/blog.css
@@ -137,3 +137,9 @@ figure.align-center img {
   display: inline-block;
 }
 
+
+/* Scrollable code blocks */
+div.highlight pre {
+  overflow-x: auto;
+  white-space: pre;
+}
